[package]
name = "nannou-led-controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
pretty_env_logger = "0.4.0"
eyre = "0.6.5"
local-ip-address = "0.4.4"
nannou = "0.17.1"
nannou_osc = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
rosc = "~0.7"
